force-app/main/default/objects/VCC_Test_Run__c/fields/VCC_Category__c.field-meta.xml
<CustomField>
    <fullName>VCC_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vdif</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>