force-app/main/default/objects/VCC_Test_Run__c/fields/VCC_Log_Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>VCC_Log_Correlation_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Correlation Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>