force-app/main/default/objects/VCC_Test_Run__c/fields/VCC_Output__c.field-meta.xml
<CustomField>
    <fullName>VCC_Output__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Output</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>