force-app/main/default/objects/VCC_Test_Run__c/fields/VCC_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>VCC_Run_Time__c</fullName>
    <formula>TIMEVALUE(CreatedDate - 5/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Time</label>
    <type>Time</type>
</CustomField>