force-app/main/default/objects/VCC_Test_Run__c/fields/VCC_Service__c.field-meta.xml
<CustomField>
    <fullName>VCC_Service__c</fullName>
    <formula>TEXT(VCC_Test_Configuration_Data__r.VCC_Service__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service</label>
    <type>Text</type>
</CustomField>