force-app/main/default/objects/VCC_Test_Run__c/fields/VCC_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>VCC_Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VCC_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Create encounter, note, and sign</fullName>
            </value>
            <value>
                <fullName>Create note, addendum, and sign</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>