force-app/main/default/objects/VCC_Test_Run__c/fields/VCC_Test_Configuration_Data__c.field-meta.xml
<CustomField>
    <fullName>VCC_Test_Configuration_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Configuration Data</label>
    <referenceTo>VCC_Test_Configuration_Data__c</referenceTo>
    <relationshipLabel>Test Runs</relationshipLabel>
    <relationshipName>Test_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>