force-app/main/default/objects/VCC_Test_Run__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>VCC_Status__c</columns>
    <columns>VCC_Site_Code__c</columns>
    <columns>VCC_Category__c</columns>
    <columns>VCC_Service__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>VCC_SOT_Group</group>
    </sharedTo>
</ListView>